prediction form functionality completed

--- a/backend/model.ipynb
+++ b/backend/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4  0    3             0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -310,14 +310,29 @@
       "25%      3.000000      0.000000  \n",
       "50%      3.000000      0.000000  \n",
       "75%      7.000000      1.000000  \n",
-      "max      7.000000      1.000000  \n"
+      "max      7.000000      1.000000  \n",
+      "age             0\n",
+      "sex             0\n",
+      "cp              0\n",
+      "trestbps        0\n",
+      "chol            0\n",
+      "fbs             0\n",
+      "restecg         0\n",
+      "thalach         0\n",
+      "exang           0\n",
+      "oldpeak         0\n",
+      "slope           0\n",
+      "ca              4\n",
+      "thal            2\n",
+      "HeartDisease    0\n",
+      "dtype: int64\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\asmit\\AppData\\Local\\Temp\\ipykernel_28384\\541714277.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\asmit\\AppData\\Local\\Temp\\ipykernel_28384\\3320146366.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data = data.replace('?', np.nan)\n"
      ]
     }
@@ -339,28 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "age             0\n",
-      "sex             0\n",
-      "cp              0\n",
-      "trestbps        0\n",
-      "chol            0\n",
-      "fbs             0\n",
-      "restecg         0\n",
-      "thalach         0\n",
-      "exang           0\n",
-      "oldpeak         0\n",
-      "slope           0\n",
-      "ca              4\n",
-      "thal            2\n",
-      "HeartDisease    0\n",
-      "dtype: int64\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 296 entries, 0 to 300\n",
       "Data columns (total 14 columns):\n",
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -517,12 +517,12 @@
       "3  0.250000  0.339623  0.208556  0.770992     0.28    1.0    0.0    1.0   \n",
       "4  0.562500  0.245283  0.294118  0.816794     0.16    0.0    1.0    1.0   \n",
       "\n",
-      "   fbs_1  exang_0  exang_1   cp  restecg  slope   ca  thal  HeartDisease  \n",
-      "0    0.0      0.0      1.0  4.0      2.0    2.0  3.0   3.0           1.0  \n",
-      "1    0.0      0.0      1.0  4.0      2.0    2.0  2.0   7.0           1.0  \n",
-      "2    0.0      1.0      0.0  3.0      0.0    3.0  0.0   3.0           0.0  \n",
-      "3    0.0      1.0      0.0  2.0      2.0    1.0  0.0   3.0           0.0  \n",
-      "4    0.0      1.0      0.0  2.0      0.0    1.0  0.0   3.0           0.0  \n",
+      "   fbs_1  exang_0  exang_1   cp  restecg  slope   ca  thal  \n",
+      "0    0.0      0.0      1.0  4.0      2.0    2.0  3.0   3.0  \n",
+      "1    0.0      0.0      1.0  4.0      2.0    2.0  2.0   7.0  \n",
+      "2    0.0      1.0      0.0  3.0      0.0    3.0  0.0   3.0  \n",
+      "3    0.0      1.0      0.0  2.0      2.0    1.0  0.0   3.0  \n",
+      "4    0.0      1.0      0.0  2.0      0.0    1.0  0.0   3.0  \n",
       "              age    trestbps        chol     thalach     oldpeak       sex_0  \\\n",
       "count  296.000000  296.000000  296.000000  296.000000  296.000000  296.000000   \n",
       "mean     0.531532    0.355176    0.324017    0.599985    0.209054    0.324324   \n",
@@ -543,15 +543,15 @@
       "75%      1.000000    1.000000    0.000000    1.000000    1.000000    4.000000   \n",
       "max      1.000000    1.000000    1.000000    1.000000    1.000000    4.000000   \n",
       "\n",
-      "          restecg       slope          ca        thal  HeartDisease  \n",
-      "count  296.000000  296.000000  296.000000  296.000000    296.000000  \n",
-      "mean     0.993243    1.597973    0.679054    4.726351      0.462838  \n",
-      "std      0.994879    0.613848    0.939726    1.940500      0.499461  \n",
-      "min      0.000000    1.000000    0.000000    3.000000      0.000000  \n",
-      "25%      0.000000    1.000000    0.000000    3.000000      0.000000  \n",
-      "50%      1.000000    2.000000    0.000000    3.000000      0.000000  \n",
-      "75%      2.000000    2.000000    1.000000    7.000000      1.000000  \n",
-      "max      2.000000    3.000000    3.000000    7.000000      1.000000  \n"
+      "          restecg       slope          ca        thal  \n",
+      "count  296.000000  296.000000  296.000000  296.000000  \n",
+      "mean     0.993243    1.597973    0.679054    4.726351  \n",
+      "std      0.994879    0.613848    0.939726    1.940500  \n",
+      "min      0.000000    1.000000    0.000000    3.000000  \n",
+      "25%      0.000000    1.000000    0.000000    3.000000  \n",
+      "50%      1.000000    2.000000    0.000000    3.000000  \n",
+      "75%      2.000000    2.000000    1.000000    7.000000  \n",
+      "max      2.000000    3.000000    3.000000    7.000000  \n"
      ]
     }
    ],
@@ -559,19 +559,22 @@
     "numerical_features = ['age', 'trestbps', 'chol', 'thalach', 'oldpeak']\n",
     "nominal_features=['sex','fbs','exang']\n",
     "ordinal_features=['cp','restecg','slope','ca','thal']\n",
-    "target=['HeartDisease']\n",
+    "target='HeartDisease'\n",
+    "\n",
+    "x = dataNew.drop(columns=[target])\n",
+    "y = dataNew[target]\n",
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', MinMaxScaler(), numerical_features),  # Normalize numerical features\n",
     "    ('cat', OneHotEncoder(handle_unknown='ignore'), nominal_features)  # One-hot encode categorical features\n",
     "], remainder='passthrough')\n",
     "\n",
-    "transformed_data = preprocessor.fit_transform(dataNew)\n",
+    "transformed_data = preprocessor.fit_transform(x)\n",
     "# print(transformed_data)\n",
     "\n",
     "new_feature_names = (numerical_features + \n",
     "                     preprocessor.named_transformers_['cat'].get_feature_names_out(nominal_features).tolist() + \n",
-    "                     ordinal_features+target)  # Add transformed feature names\n",
+    "                     ordinal_features)  # Add transformed feature names\n",
     "\n",
     "data_transformed = pd.DataFrame(transformed_data, columns=new_feature_names)\n",
     "\n",
@@ -588,14 +591,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(296, 16) (296,)\n",
+      "(296, 13) (296,)\n",
       "(236, 16)\n",
       "(60, 16)\n",
       "(236,)\n",
@@ -604,16 +607,14 @@
     }
    ],
    "source": [
-    "x = data_transformed.drop(columns=target)\n",
-    "y = data_transformed['HeartDisease']\n",
     "\n",
     "# Split into train-test sets\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data_transformed, y, test_size=0.2, random_state=42)\n",
     "print(x.shape , y.shape)\n",
     "print(x_train.shape)\n",
     "print(x_test.shape)\n",
     "print(y_train.shape)\n",
-    "print(y_test.shape)"
+    "print(y_test.shape)\n"
    ]
   },
   {
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -650,6 +651,19 @@
     "# Evaluate accuracy\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Model Accuracy: {accuracy:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "\n",
+    "pickle.dump(model, open('model.pkl','wb'))\n",
+    "pickle.dump(preprocessor, open('preprocessor.pkl','wb'))\n"
    ]
   }
  ],
